--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "try_catch_wrapper",
-  "version": "0.0.1",
+  "name": "try-catch-wrapper",
+  "main": "./lib/try-catch",
+  "version": "0.1.0",
   "description": "A simple shortcut to wrap a portion of code in a try and catch",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "activationCommands": {
+    "atom-text-editor": [
+      "try-catch:toggle"
+    ]
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TheOct0/atom_try_catch_wrapper.git"
-  },
-  "author": "Maël Quéau",
+  "repository": "https://github.com/TheOct0/atom_try_catch_wrapper",
+  "author": "TheOct0",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TheOct0/atom_try_catch_wrapper/issues"
+  "engines": {
+    "atom": ">0.50.0"
   },
-  "homepage": "https://github.com/TheOct0/atom_try_catch_wrapper#readme"
+  "dependencies": {}
 }
